tests/operator-without-parentheses.stderr
error: cannot add `()` to `Number`
   ┌─ test:1:8
   │
 1 │ show 1 + 2
   │        ^
   │        │
   │        could not find instance `Add () Number _`
   │        operators consume all expressions on either side; you may be missing parentheses
   │
   ┌─ <dir>/std/math.wpl:16:14
   │
16 │   'a + 'b -> Add 'b 'a
   │              --- actual error occurred here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

error: missing instance
   ┌─ test:2:11
   │
 2 │ show True or False
   │           ^^
   │           │
   │           could not find instance `Or () Boolean _`
   │           operators consume all expressions on either side; you may be missing parentheses
   │
   ┌─ <dir>/std/logic.wpl:54:15
   │
54 │   'a or 'b -> Or (() -> 'b) 'a
   │               -- actual error occurred here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

error: cannot add `Number` to `Text`
   ┌─ test:3:9
   │
 3 │ show (1 + "hi")
   │         ^ could not find instance `Add Number Text _`
   │
   ┌─ <dir>/std/math.wpl:16:14
   │
16 │   'a + 'b -> Add 'b 'a
   │              --- actual error occurred here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

